--- a/Manager/main.Master
+++ b/Manager/main.Master
@@ -33,6 +33,7 @@
 </head>
 <body id="kt_body" class="header-fixed header-tablet-and-mobile-fixed aside-enabled">
     <form id="form1" runat="server">
+        <asp:ScriptManager ID="scriptmanager" runat="server"></asp:ScriptManager>
         <script>var defaultThemeMode = "light"; var themeMode; if (document.documentElement) { if (document.documentElement.hasAttribute("data-theme-mode")) { themeMode = document.documentElement.getAttribute("data-theme-mode"); } else { if (localStorage.getItem("data-theme") !== null) { themeMode = localStorage.getItem("data-theme"); } else { themeMode = defaultThemeMode; } } if (themeMode === "system") { themeMode = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light"; } document.documentElement.setAttribute("data-theme", themeMode); }</script>
         <!--end::Theme mode setup on page load-->
         <!--begin::Main-->
@@ -102,7 +103,7 @@
                                         <!--begin:Menu item-->
                                         <div class="menu-item">
                                             <!--begin:Menu link-->
-                                            <a class="menu-link" href="../../demo18/dist/pages/user-profile/overview.html">
+                                            <a class="menu-link" href="AddPatient.aspx">
                                                 <span class="menu-bullet">
                                                     <span class="bullet bullet-dot"></span>
                                                 </span>
@@ -114,7 +115,7 @@
                                         <!--begin:Menu item-->
                                         <div class="menu-item">
                                             <!--begin:Menu link-->
-                                            <a class="menu-link" href="../../demo18/dist/pages/user-profile/projects.html">
+                                            <a class="menu-link" href="SearchPatient.aspx">
                                                 <span class="menu-bullet">
                                                     <span class="bullet bullet-dot"></span>
                                                 </span>
@@ -152,7 +153,7 @@
                                         <!--begin:Menu item-->
                                         <div class="menu-item">
                                             <!--begin:Menu link-->
-                                            <a class="menu-link" href="../../demo18/dist/account/overview.html">
+                                            <a class="menu-link" href="AddDoctor.aspx">
                                                 <span class="menu-bullet">
                                                     <span class="bullet bullet-dot"></span>
                                                 </span>
@@ -164,7 +165,7 @@
                                         <!--begin:Menu item-->
                                         <div class="menu-item">
                                             <!--begin:Menu link-->
-                                            <a class="menu-link" href="../../demo18/dist/account/settings.html">
+                                            <a class="menu-link" href="SearchDoctor.aspx">
                                                 <span class="menu-bullet">
                                                     <span class="bullet bullet-dot"></span>
                                                 </span>
@@ -198,14 +199,14 @@
                                     <!--begin:Menu sub-->
                                     <div class="menu-sub menu-sub-accordion">
                                         <!--begin:Menu item-->
-                                        <div data-kt-menu-trigger="click" class="menu-item menu-accordion">
+                                          <div class="menu-item">
                                             <!--begin:Menu link-->
-                                            <span class="menu-link">
+                                            <a class="menu-link" href="AddCounselor.aspx">
                                                 <span class="menu-bullet">
                                                     <span class="bullet bullet-dot"></span>
                                                 </span>
                                                 <span class="menu-title">Add Counselor</span>
-                                            </span>
+                                            </a>
                                             <!--end:Menu link-->
                                         </div>
                                         <!--end:Menu item-->
@@ -214,7 +215,7 @@
                                         <!--begin:Menu item-->
                                         <div class="menu-item">
                                             <!--begin:Menu link-->
-                                            <a class="menu-link" href="../../demo18/dist/authentication/general/error-500.html">
+                                            <a class="menu-link" href="SearchCounselor.aspx">
                                                 <span class="menu-bullet">
                                                     <span class="bullet bullet-dot"></span>
                                                 </span>
