--- a/Counselor/main.Master
+++ b/Counselor/main.Master
@@ -111,7 +111,7 @@
                                         </div>
                                         <!--end:Menu item-->
                                         <!--begin:Menu item-->
-                                        <div class="menu-item">
+                                     <%--   <div class="menu-item">
                                             <!--begin:Menu link-->
                                             <a class="menu-link" href="../../demo18/dist/pages/user-profile/projects.html">
                                                 <span class="menu-bullet">
@@ -120,7 +120,7 @@
                                                 <span class="menu-title">View Patient</span>
                                             </a>
                                             <!--end:Menu link-->
-                                        </div>
+                                        </div>--%>
 
                                     </div>
                                     <!--end:Menu sub-->
