--- a/Manager/main.Master
+++ b/Manager/main.Master
@@ -53,12 +53,11 @@
                             <div class="menu menu-column menu-sub-indention menu-active-bg menu-state-primary menu-title-gray-700 fs-6 menu-rounded w-100 fw-semibold" id="#kt_aside_menu" data-kt-menu="true">
 
 
-
-
+                                <div  class="menu-item menu-accordion">
                                 <!--begin:Menu item-->
-                                <div data-kt-menu-trigger="click" class="menu-item menu-accordion">
+                             
                                     <!--begin:Menu link-->
-                                    <span class="menu-link">
+                                    <a class="menu-link" href="Dashboard.aspx">
                                         <span class="menu-icon">
                                             <!--begin::Svg Icon | path: icons/duotune/communication/com005.svg-->
                                             <span class="svg-icon svg-icon-2">
@@ -72,13 +71,13 @@
                                             <!--end::Svg Icon-->
                                         </span>
                                         <span class="menu-title">Dashboard</span>
-                                    </span>
+                                    </a>
                                     <!--end:Menu link-->
 
 
-                                </div>
+                             
                                 <!--end:Menu item-->
-
+                                    </div>
 
                                 <!--begin:Menu item-->
                                 <div data-kt-menu-trigger="click" class="menu-item menu-accordion">
@@ -264,7 +263,7 @@
                                         </button>
                                         <!--end::Aside toggle-->
                                         <!--begin::Header Logo-->
-                                        <a href="../../demo18/dist/index.html">
+                                        <a href="Dashboard.aspx">
                                             <img alt="Logo" src="assets/media/logos/merilogo.svg" class="h-30px h-lg-35px" />
                                         </a>
                                         <!--end::Header Logo-->
@@ -314,13 +313,13 @@
                                             <!--end::Menu separator-->
                                             <!--begin::Menu item-->
                                             <div class="menu-item px-5">
-                                                <a href="../../demo18/dist/account/overview.html" class="menu-link px-5">My Profile</a>
+                                                <a href="" class="menu-link px-5">My Profile</a>
                                             </div>
                                             <!--end::Menu item-->
 
                                             <!--begin::Menu item-->
                                             <div class="menu-item px-5">
-                                                <a href="../../demo18/dist/account/statements.html" class="menu-link px-5">Change Password</a>
+                                                <a href="" class="menu-link px-5">Change Password</a>
                                             </div>
                                             <!--end::Menu item-->
                                             <!--begin::Menu item-->
